# spd

algorytm_Carliera/: CMakeLists.txt
algorytm_Carliera/inc/: Carlier.hh  Schrage.hh  Zadanie.hh  problem_rpq.hh  zadanie.hh
algorytm_Carliera/src/: Schrage.cpp  Zadanie.cpp  main.cpp  problem_rpq.cpp  zadanie.cpp
lab_01/: CMakeLists.txt
lab_01/inc/: task.hh  task_list.hh
lab_01/src/: main.cpp  task.cpp  task_list.cpp
